# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

  27 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Updated /sbin/rc's way of checking for devfs support (now rather uses
    awk, as it is more accurate).  Closes bug #5458.

    Add the Redhat/Mandrake /forcefsck and /fastboot options to our checkroot
    and checkfs.  Updated /etc/init.d/{checkroot,checkfs,halt.sh} for this.
    Thanks goes to Chris PeBenito (bug #5570).

    Changed most daemons to use /bin/false as shell.  Should close bug #5388.

  27 Jul 2002; Nicholas Jones <carpaski@gentoo.org>:
    
    Added vpopmail user and group as 89:89

  22 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add the cyrus user to /etc/passwd.  Resolves bug #4100.

    Some bugfixes and speed improvements to /sbin/depscan.sh after
    last changes.

    Replace some cat/grep's in /sbin/rc-envupdate.sh with awk's to
    get some speed improvements.

  21 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Fix LVM support in /etc/init.d/checkfs again, thanks to help from
    Kyle Manna <nitro@gentoo.org>.

    Add software RAID support to /etc/init.d/checkfs, thanks to
    Daniel Ahlberg <aliz@gentoo.org>.

    Update the cache_depend() funtion in /sbin/depscan.sh not to
    quit on any "}", but only on the one matching the first "{". This
    requires wc in /bin, so baselayout should depend on
    >=sys-apps/textutils-2.0.19-r2

    Update /etc/init.d/netmount to try and detect nfs mounts that should be
    mounted automatically on boot.  This requires awk in /bin, so baselayout
    should depend on >=sys-apps/gawk-3.1.0-r3.

* rc-scripts 1.3.6 (17 Jul 2002)

  17 Jul 2002; Martin Schlemmer <azarah@gentoo.org>:

    Add logging functionality to the rc-scripts, thanks to Alexander Holler,
    bug #4037 for the basic idea.  Updated /sbin/functions.sh for this.
