@@ -24,6 +24,7 @@ named:x:40:40:bind:/var/bind:/bin/false
 mysql:x:60:60:mysql:/var/lib/mysql:/bin/false
 postgres:x:70:70::/var/lib/postgresql:/bin/false
 apache:x:81:81:apache:/home/httpd:/bin/false
+nut:x:84:84:nut:/var/state/nut:/bin/false
 cyrus:x:85:12::/usr/cyrus:/bin/false
 vpopmail:x:89:89::/var/vpopmail:/bin/false
 alias:x:200:200::/var/qmail/alias:/bin/false
